Fixing links that deeplink into a page.

--- a/docs/0.3.9/60-second setup.md.hbs
+++ b/docs/0.3.9/60-second setup.md.hbs
@@ -88,4 +88,4 @@ That's it - you're in business.
 
 * You could pass in a template string as the `template` option, rather than the ID of a script tag containing the template. In that case, if your template is more than a couple of lines you'll probably want to keep it in a separate file and load it (e.g. with `$.ajax`, if you're using jQuery)
 * As your app grows in complexity, you'll want to keep your application code (i.e. the bit that calls `new Ractive()`) in a separate file. You can also [use Ractive with RequireJS](using-ractive-with-requirejs).
-* Work your way through the [tutorials](http://learn.ractivejs.org) to learn how to use Ractive. You can also consult the [[API reference]].
+* Work your way through the [tutorials](http://learn.ractivejs.org) to learn how to use Ractive. You can also consult the {{{createLink 'API reference'}}}.
