--- a/docs/0.3.9/Mustaches.md.hbs
+++ b/docs/0.3.9/Mustaches.md.hbs
@@ -82,7 +82,7 @@ We can iterate over the users object with the following:
 
 ### Restricted references
 
-Normally, references are resolved according to a specific algorithm, which involves *moving up the context stack* until a property matching the reference is found. In the vast majority of cases this is exactly what you want, but occasionally (for example when dealing with [recursive partials](Partials#recursive-partials)) it is useful to be able to specify that a property must exist *in the current context*.
+Normally, references are resolved according to a specific algorithm, which involves *moving up the context stack* until a property matching the reference is found. In the vast majority of cases this is exactly what you want, but occasionally (for example when dealing with {{{createLink 'parials' 'recursive partials' 'recursive-partials'}}}) it is useful to be able to specify that a property must exist *in the current context*.
 
 To restrict a reference to the current context, prefix it with a `.`, e.g. `\{{#.bar}}`:
 
