--- a/docs/0.3.9/Ractive.events.md.hbs
+++ b/docs/0.3.9/Ractive.events.md.hbs
@@ -1,7 +1,7 @@
 ---
 title: Ractive.events
 ---
-If you're using [proxy events](Events#on-events), you can either use the standard DOM events that an element can listen to (e.g. `click`, `mouseover`, `touchmove`, `load`, whatever) or you can use custom event definitions.
+If you're using {{{createLink 'events' 'proxy events' 'on-events'}}}, you can either use the standard DOM events that an element can listen to (e.g. `click`, `mouseover`, `touchmove`, `load`, whatever) or you can use custom event definitions.
 
 These allow you to define more complex events than the native ones, but still treat them as first class citizens. For example the `tap` event abstracts away differences between mouse and touch interfaces, eliminating the 300ms delay users would experience on a touch device if you were only listening for `click` events:
 
