--- a/docs/0.3.9/Ractive.transitions (global).md.hbs
+++ b/docs/0.3.9/Ractive.transitions (global).md.hbs
@@ -5,4 +5,4 @@ This is a set of globally-available (i.e, shared between all Ractive instances) 
 
 A few standard transition functions are included 'out of the box', such as `fade`. (Pull requests welcome!)
 
-You can add your own transitions - they should adhere to the [transition API](transitions#creating-transitions).
+You can add your own transitions - they should adhere to the {{{createLink 'transitions' 'transition API' 'creating-transitions'}}}.
