--- a/docs/0.3.9/Templates.md.hbs
+++ b/docs/0.3.9/Templates.md.hbs
@@ -13,7 +13,7 @@ The most obvious difference is that Ractive templates contain {{{createLink 'mus
 
 ## Proxy event directives
 
-Elements in a Ractive template can have [proxy events](events#proxy-events), which look like attributes but don't get rendered to the DOM as attributes (they are intercepted, and used as event binding instructions instead):
+Elements in a Ractive template can have {{{createLink 'events' 'proxy events' 'proxy-events'}}}, which look like attributes but don't get rendered to the DOM as attributes (they are intercepted, and used as event binding instructions instead):
 
 ```html
 <button proxy-click='activate'>Activate!</button>
