--- a/docs/0.3.9/Expressions.md.hbs
+++ b/docs/0.3.9/Expressions.md.hbs
@@ -1,7 +1,7 @@
 ---
 title: Expressions
 ---
-Expressions allow you to use logic within a template. At their simplest, that may just mean a basic arithmetic operation, such as converting to percentages, or making your [index references](Mustaches#index-references) start at 1 rather than 0:
+Expressions allow you to use logic within a template. At their simplest, that may just mean a basic arithmetic operation, such as converting to percentages, or making your {{{createLink 'mustaches' 'index references' 'index-references'}}} start at 1 rather than 0:
 
 ```html
 <div class='bar-chart'>
