--- a/templates/partials/left-nav.md.hbs
+++ b/templates/partials/left-nav.md.hbs
@@ -1,50 +1,50 @@
 <h4><a href="{{relative absolute 'latest/'}}">Introduction</a></h4>
 <ul>
-	<li><a href="{{relative absolute 'latest/second-setup'}}">60 Second Setup</a></li>
+	<li>{{{createLink 'second-setup' '60 Second Setup'}}}</li>
 	<li><a href="http://examples.ractivejs.org/">Examples</a></li>
 	<li><a href="http://learn.ractivejs.org/">Tutorials</a></li>
 </ul>
-<h4><a href="{{relative absolute 'latest/api-reference'}}">API Reference</a></h4>
+<h4>{{{createLink 'API Reference'}}}</h4>
 <ul>
-	<li><a href="{{relative absolute 'latest/initialisation-options'}}">Initialisation Options</a></li>
-	<li><a href="{{relative absolute 'latest/ractive-animate'}}">ractive.animate()</a></li>
-	<li><a href="{{relative absolute 'latest/ractive-find'}}">active.find()</a></li>
-	<li><a href="{{relative absolute 'latest/ractive-findall'}}">ractive.findAll()</a></li>
-	<li><a href="{{relative absolute 'latest/ractive-fire'}}">ractive.fire()</a></li>
-	<li><a href="{{relative absolute 'latest/ractive-get'}}">ractive.get()</a></li>
-	<li><a href="{{relative absolute 'latest/ractive-merge'}}">ractive.merge()</a></li>
-	<li><a href="{{relative absolute 'latest/ractive-observe'}}">ractive.observe()</a></li>
-	<li><a href="{{relative absolute 'latest/ractive-off'}}">ractive.off()</a></li>
-	<li><a href="{{relative absolute 'latest/ractive-on'}}">ractive.on()</a></li>
-	<li><a href="{{relative absolute 'latest/ractive-set'}}">ractive.set()</a></li>
-	<li><a href="{{relative absolute 'latest/ractive-animate'}}">ractive.teardown()</a></li>
-	<li><a href="{{relative absolute 'latest/ractive-teardown'}}">ractive.toHTML()</a></li>
-	<li><a href="{{relative absolute 'latest/ractive-tohtml'}}">ractive.update()</a></li>
-	<li><a href="{{relative absolute 'latest/ractive-updatemodel'}}">ractive.updateModel()</a></li>
-	<li><a href="{{relative absolute 'latest/ractive-nodes'}}">ractive.nodes</a></li>
-	<li><a href="{{relative absolute 'latest/ractive-transitions'}}">ractive.transitions</a></li>
-	<li><a href="{{relative absolute 'latest/ractive-partials-instance'}}">ractive.parials</a></li>
-	<li><a href="{{relative absolute 'latest/ractive-parse'}}">Ractive.parse()</a></li>
-	<li><a href="{{relative absolute 'latest/ractive-extend'}}">Ractive.extend()</a></li>
+	<li>{{{createLink 'Initialisation Options'}}}</li>
+	<li>{{{createLink 'ractive.animate()'}}}</li>
+	<li>{{{createLink 'ractive.find()'}}}</li>
+	<li>{{{createLink 'ractive.findAll()'}}}</li>
+	<li>{{{createLink 'ractive.fire()'}}}</li>
+	<li>{{{createLink 'ractive.get()'}}}</li>
+	<li>{{{createLink 'ractive.merge()'}}}</li>
+	<li>{{{createLink 'ractive.observe()'}}}</li>
+	<li>{{{createLink 'ractive.off()'}}}</li>
+	<li>{{{createLink 'ractive.on()'}}}</li>
+	<li>{{{createLink 'ractive.set()'}}}</li>
+	<li>{{{createLink 'ractive.teardown()'}}}</li>
+	<li>{{{createLink 'ractive.toHTML()'}}}</li>
+	<li>{{{createLink 'ractive.update()'}}}</li>
+	<li>{{{createLink 'ractive.updateModel()'}}}</li>
+	<li>{{{createLink 'ractive.nodes'}}}</li>
+	<li>{{{createLink 'ractive.transitions'}}}</li>
+	<li>{{{createLink 'ractive-partials-instance' 'ractive.parials'}}}</li>
+	<li>{{{createLink 'Ractive.parse()'}}}</li>
+	<li>{{{createLink 'Ractive.extend()'}}}</li>
 </ul>
-<h4><a href="{{relative absolute 'latest/ractive-extend'}}">Plugins</a></h4>
-<h4><a href="{{relative absolute 'latest/templates'}}">Templating</a></h4>
+<h4>{{{createLink 'Plugins'}}}</h4>
+<h4>{{{createLink 'templates' 'Templating'}}}</h4>
 <ul>
-	<li><a href="{{relative absolute 'latest/templates'}}">Templates</a></li>
-	<li><a href="{{relative absolute 'latest/mustaches'}}">Mustaches</a></li>
+	<li>{{{createLink 'Templates'}}}</li>
+	<li>{{{createLink 'Mustaches'}}}</li>
 </ul>
-<h4><a href="{{relative absolute 'latest/adaptors'}}">Adapators</a></h4>
-<h4><a href="{{relative absolute 'latest/array-modification'}}">Array modification</a></h4>
-<h4><a href="{{relative absolute 'latest/components'}}">Components</a></h4>
-<h4><a href="{{relative absolute 'latest/decorators'}}">Decorators</a></h4>
-<h4><a href="{{relative absolute 'latest/dependants'}}">Dependants</a></h4>
-<h4><a href="{{relative absolute 'latest/expressions'}}">Expressions</a></h4>
-<h4><a href="{{relative absolute 'latest/events'}}">Events</a></h4>
-<h4><a href="{{relative absolute 'latest/keypaths'}}">Keypaths</a></h4>
-<h4><a href="{{relative absolute 'latest/magic-mode'}}">Magic Mode</a></h4>
-<h4><a href="{{relative absolute 'latest/observers'}}">Observers</a></h4>
-<h4><a href="{{relative absolute 'latest/parallel-dom'}}">Parallel DOM</a></h4>
-<h4><a href="{{relative absolute 'latest/partials'}}">Partials</a></h4>
-<h4><a href="{{relative absolute 'latest/references'}}">References</a></h4>
-<h4><a href="{{relative absolute 'latest/transitions'}}">Transitions</a></h4>
-<h4><a href="{{relative absolute 'latest/two-way-binding'}}">Two-way binding</a></h4>
+<h4>{{{createLink 'Adapators'}}}</h4>
+<h4>{{{createLink 'Array modification'}}}</h4>
+<h4>{{{createLink 'Components'}}}</h4>
+<h4>{{{createLink 'Decorators'}}}</h4>
+<h4>{{{createLink 'Dependants'}}}</h4>
+<h4>{{{createLink 'Expressions'}}}</h4>
+<h4>{{{createLink 'Events'}}}</h4>
+<h4>{{{createLink 'Keypaths'}}}</h4>
+<h4>{{{createLink 'Magic Mode'}}}</h4>
+<h4>{{{createLink 'Observers'}}}</h4>
+<h4>{{{createLink 'Parallel DOM'}}}</h4>
+<h4>{{{createLink 'Partials'}}}</h4>
+<h4>{{{createLink 'References'}}}</h4>
+<h4>{{{createLink 'Transitions'}}}</h4>
+<h4>{{{createLink 'Two-way binding'}}}</h4>
