--- a/scss/typography.scss
+++ b/scss/typography.scss
@@ -2,11 +2,11 @@
 
 @font-face{
 	font-family: 'Voltaire';
-	src: url('assets/fonts/Voltaire.eot');
-	src: url('assets/fonts/Voltaire.eot?#iefix') format('embedded-opentype'),
-	     url('assets/fonts/Voltaire.woff') format('woff'),
-	     url('assets/fonts/Voltaire.ttf') format('truetype'),
-	     url('assets/fonts/Voltaire.svg#webfont') format('svg');
+	src: url('assets/fonts/Voltaire/Voltaire.eot');
+	src: url('assets/fonts/Voltaire/Voltaire.eot?#iefix') format('embedded-opentype'),
+	     url('assets/fonts/Voltaire/Voltaire.woff') format('woff'),
+	     url('assets/fonts/Voltaire/Voltaire.ttf') format('truetype'),
+	     url('assets/fonts/Voltaire/Voltaire.svg#webfont') format('svg');
 }
 
 @font-face{
