--- a/partials/nav.html
+++ b/partials/nav.html
@@ -1,14 +1,14 @@
 <nav>
 	<div class='nav-inner'>
-		<a class='selected' href='http://ractivejs.org'>Ractive.js</a>
+		<a<%= id === 'index' ? ' class="selected"' : '' %> href='http://ractivejs.org'>Ractive.js</a>
 
 		<ul>
-			<li><a href='http://docs.ractivejs.org/latest/second-setup'>60 second setup</a></li>
-			<li><a href='http://learn.ractivejs.org'>Tutorials</a></li>
-			<li><a href='http://examples.ractivejs.org'>Examples</a></li>
-			<li><a href='http://docs.ractivejs.org'>Docs</a></li>
-			<li><a href='http://ractivejs.org/plugins'>Plugins</a></li>
-			<li><a href='http://blog.ractivejs.org'>Blog</a></li>
+			<li<%= id === 'setup'    ? ' class="selected"' : '' %>><a href='http://docs.ractivejs.org/latest/second-setup'>60 second setup</a></li>
+			<li<%= id === 'learn'    ? ' class="selected"' : '' %>><a href='http://learn.ractivejs.org'>Tutorials</a></li>
+			<li<%= id === 'examples' ? ' class="selected"' : '' %>><a href='http://examples.ractivejs.org'>Examples</a></li>
+			<li<%= id === 'docs'     ? ' class="selected"' : '' %>><a href='http://docs.ractivejs.org'>Docs</a></li>
+			<li<%= id === 'plugins'  ? ' class="selected"' : '' %>><a href='http://ractivejs.org/plugins'>Plugins</a></li>
+			<li<%= id === 'blog'     ? ' class="selected"' : '' %>><a href='http://blog.ractivejs.org'>Blog</a></li>
 			<li class='github-small'><a href='https://github.com/ractivejs/ractive'>GitHub</a></li>
 		</ul>
 
