--- a/scss/footer.scss
+++ b/scss/footer.scss
@@ -2,7 +2,7 @@ footer {
 	text-align: center;
 	border-top: 1px solid #eee;
 	margin: 1em 0 0 0;
-	padding: 1em 0 0 0;
+	padding: 1em 0 1em 0;
 
 	p {
 		max-width: 64em;
