--- a/partials/nav.html
+++ b/partials/nav.html
@@ -3,7 +3,7 @@
 		<a<%= id === 'index' ? ' class="selected"' : '' %> href='http://ractivejs.org'>Ractive.js</a>
 
 		<ul>
-			<li<%= id === 'setup'    ? ' class="selected"' : '' %>><a href='http://docs.ractivejs.org/latest/second-setup'>60 second setup</a></li>
+			<li<%= id === 'setup'    ? ' class="selected"' : '' %>><a href='http://ractivejs.org/60-second-setup'>60 second setup</a></li>
 			<li<%= id === 'learn'    ? ' class="selected"' : '' %>><a href='http://learn.ractivejs.org'>Tutorials</a></li>
 			<li<%= id === 'examples' ? ' class="selected"' : '' %>><a href='http://examples.ractivejs.org'>Examples</a></li>
 			<li<%= id === 'docs'     ? ' class="selected"' : '' %>><a href='http://docs.ractivejs.org'>Docs</a></li>
