--- a/components/codemirror.html
+++ b/components/codemirror.html
@@ -1,5 +1,6 @@
-<textarea></textarea>
-
+<div class='codemirror-container' style='{{#height}}height: {{height}};{{/height}}'>
+	<textarea></textarea>
+</div>
 
 <script>
 	var CodeMirror = require( 'codemirror/codemirror' );
@@ -43,6 +44,8 @@
 
 			editor.on( 'keydown', function ( editor, event ) {
 				var name = CodeMirror.keyNames[ event.which ];
+
+				return;
 
 				if ( name ) {
 					component.fire( name.toLowerCase(), {
