--- a/scss/typography.scss
+++ b/scss/typography.scss
@@ -22,7 +22,7 @@
 
 @font-face{
 	font-family: 'Source Sans Pro';
-	src: url('assets/fonts/Source_Sans_Pro/SourceSansPro-Bold.ttf') format('truetype');
+	src: url('assets/fonts/Source_Sans_Pro/SourceSansPro-SemiBold.ttf') format('truetype');
 	font-weight: 500;
 }
 
@@ -44,10 +44,17 @@ body {
 	-webkit-font-smoothing: antialiased;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1, h2 {
 	font-family: 'Voltaire';
 	margin: 2em 0 0.5em 0;
 	font-weight: normal;
+	color: #222;
+}
+
+h3, h4, h5, h6 {
+	font-family: 'Source Sans Pro';
+	font-weight: 500;
+	margin: 0 0 0.5em 0;
 	color: #222;
 }
 
@@ -66,4 +73,8 @@ a:hover {
 
 pre, code {
 	font-family: Inconsolata;
+}
+
+strong, b {
+	font-weight: 500;
 }
