--- a/scss/content.scss
+++ b/scss/content.scss
@@ -1,8 +1,10 @@
 @import "mixins";
 
 main {
+	position: relative;
 	max-width: 64em;
-	margin: 0 auto;
+	margin: 0 auto 4em auto;
 	padding: 0 1em;
 	@include border-box;
+	@include clearfix;
 }
