--- a/templates/page.hbs
+++ b/templates/page.hbs
@@ -4,13 +4,9 @@
 	<meta charset='utf-8'>
 	<meta http-equiv='X-UA-Compatible' content='IE=Edge,chrome=1'>
 
-	<link rel='icon' type='image/png' href='../favicon.png'>
+	<title > {{page.data.title}} | Docs | Ractive.js </title >
 
-    <title > {{page.data.title}} | Docs | Ractive.js </title > 
-
-	<!-- CSS -->
-	<link href='http://fonts.googleapis.com/css?family=Source+Code+Pro:400,700,900' rel='stylesheet' type='text/css'>
-	<link rel='stylesheet' href='../min.css'>
+	<%= head %>
 </head>
 
 <body class='example'>
