--- a/templates/page.hbs
+++ b/templates/page.hbs
@@ -4,7 +4,7 @@
 	<meta charset='utf-8'>
 	<meta http-equiv='X-UA-Compatible' content='IE=Edge,chrome=1'>
 
-	<title> {{page.data.title}} | Docs | Ractive.js </title >
+	<title> {{title}} | Docs | Ractive.js </title >
 
 	<meta name='viewport' content='width=device-width, initial-scale=1, maximum-scale=1'>
 
@@ -23,7 +23,7 @@
 
 	<main>
 		<div class='content'>
-			<h1>{{page.data.title}}</h1>
+			<h1>{{title}}</h1>
 
 			{{# markdown}}
 				{{> body}}
