--- a/templates/partials/left-nav.md.hbs
+++ b/templates/partials/left-nav.md.hbs
@@ -1,50 +1,83 @@
-<h4><a href="{{relative absolute 'latest/'}}">Introduction</a></h4>
-<ul>
-	<li>{{{createLink 'second-setup' '60 Second Setup'}}}</li>
-	<li><a href="http://examples.ractivejs.org/">Examples</a></li>
-	<li><a href="http://learn.ractivejs.org/">Tutorials</a></li>
+<section>
+	<h1>Introduction</h1>
+	<ul>
+		<li>{{{createLink 'Get started'}}}</li>
+		<li>{{{createLink 'Get support'}}}</li>
+	</ul>
+</section>
+
+<section>
+	<h1>API Reference</h1>
+	<h2>new Ractive(...)</h2>
+	<ul>
+		<li>{{{createLink 'Initialisation options'}}}</li>
+	</ul>
+
+	<h2>Instance methods</h2>
+	<ul>
+		<li>{{{createLink 'Initialisation Options'}}}</li>
+		<li>{{{createLink 'ractive.animate()'}}}</li>
+		<li>{{{createLink 'ractive.find()'}}}</li>
+		<li>{{{createLink 'ractive.findAll()'}}}</li>
+		<li>{{{createLink 'ractive.fire()'}}}</li>
+		<li>{{{createLink 'ractive.get()'}}}</li>
+		<li>{{{createLink 'ractive.merge()'}}}</li>
+		<li>{{{createLink 'ractive.observe()'}}}</li>
+		<li>{{{createLink 'ractive.off()'}}}</li>
+		<li>{{{createLink 'ractive.on()'}}}</li>
+		<li>{{{createLink 'ractive.set()'}}}</li>
+		<li>{{{createLink 'ractive.teardown()'}}}</li>
+		<li>{{{createLink 'ractive.toHTML()'}}}</li>
+		<li>{{{createLink 'ractive.update()'}}}</li>
+		<li>{{{createLink 'ractive.updateModel()'}}}</li>
+	</ul>
+
+	<h2>Instance properties</h2>
+	<ul>
+		<li>{{{createLink 'ractive.nodes'}}}</li>
+		<li>{{{createLink 'ractive.transitions'}}}</li>
+		<li>{{{createLink 'ractive-partials-instance' 'ractive.partials'}}}</li>
+	</ul>
+
+	<h2>Static methods</h2>
+	<ul>
+		<li>{{{createLink 'Ractive.parse()'}}}</li>
+		<li>{{{createLink 'Ractive.extend()'}}}</li>
+	</ul>
+
+	<h2>Static properties</h2>
+	<ul>
+		<li>{{{createLink 'Ractive.defaults'}}}</li>
+	</ul>
 </ul>
-<h4>{{{createLink 'API Reference'}}}</h4>
-<ul>
-	<li>{{{createLink 'Initialisation Options'}}}</li>
-	<li>{{{createLink 'ractive.animate()'}}}</li>
-	<li>{{{createLink 'ractive.find()'}}}</li>
-	<li>{{{createLink 'ractive.findAll()'}}}</li>
-	<li>{{{createLink 'ractive.fire()'}}}</li>
-	<li>{{{createLink 'ractive.get()'}}}</li>
-	<li>{{{createLink 'ractive.merge()'}}}</li>
-	<li>{{{createLink 'ractive.observe()'}}}</li>
-	<li>{{{createLink 'ractive.off()'}}}</li>
-	<li>{{{createLink 'ractive.on()'}}}</li>
-	<li>{{{createLink 'ractive.set()'}}}</li>
-	<li>{{{createLink 'ractive.teardown()'}}}</li>
-	<li>{{{createLink 'ractive.toHTML()'}}}</li>
-	<li>{{{createLink 'ractive.update()'}}}</li>
-	<li>{{{createLink 'ractive.updateModel()'}}}</li>
-	<li>{{{createLink 'ractive.nodes'}}}</li>
-	<li>{{{createLink 'ractive.transitions'}}}</li>
-	<li>{{{createLink 'ractive-partials-instance' 'ractive.parials'}}}</li>
-	<li>{{{createLink 'Ractive.parse()'}}}</li>
-	<li>{{{createLink 'Ractive.extend()'}}}</li>
-</ul>
-<h4>{{{createLink 'Plugins'}}}</h4>
-<h4>{{{createLink 'templates' 'Templating'}}}</h4>
-<ul>
-	<li>{{{createLink 'Templates'}}}</li>
-	<li>{{{createLink 'Mustaches'}}}</li>
-</ul>
-<h4>{{{createLink 'Adapators'}}}</h4>
-<h4>{{{createLink 'Array modification'}}}</h4>
-<h4>{{{createLink 'Components'}}}</h4>
-<h4>{{{createLink 'Decorators'}}}</h4>
-<h4>{{{createLink 'Dependants'}}}</h4>
-<h4>{{{createLink 'Expressions'}}}</h4>
-<h4>{{{createLink 'Events'}}}</h4>
-<h4>{{{createLink 'Keypaths'}}}</h4>
-<h4>{{{createLink 'Magic Mode'}}}</h4>
-<h4>{{{createLink 'Observers'}}}</h4>
-<h4>{{{createLink 'Parallel DOM'}}}</h4>
-<h4>{{{createLink 'Partials'}}}</h4>
-<h4>{{{createLink 'References'}}}</h4>
-<h4>{{{createLink 'Transitions'}}}</h4>
-<h4>{{{createLink 'Two-way binding'}}}</h4>
+
+<section>
+	<h1>Plugins</h1>
+	<ul>
+		<li>{{{createLink 'Find plugins'}}}</li>
+		<li>{{{createLink 'Create plugins'}}}</li>
+	</ul>
+</section>
+
+<section>
+	<h1>Glossary</h1>
+	<ul>
+		<li>{{{createLink 'Adapators'}}}</li>
+		<li>{{{createLink 'Array modification'}}}</li>
+		<li>{{{createLink 'Components'}}}</li>
+		<li>{{{createLink 'Decorators'}}}</li>
+		<li>{{{createLink 'Dependants'}}}</li>
+		<li>{{{createLink 'Expressions'}}}</li>
+		<li>{{{createLink 'Events'}}}</li>
+		<li>{{{createLink 'Keypaths'}}}</li>
+		<li>{{{createLink 'Magic Mode'}}}</li>
+		<li>{{{createLink 'Mustaches'}}}</li>
+		<li>{{{createLink 'Observers'}}}</li>
+		<li>{{{createLink 'Parallel DOM'}}}</li>
+		<li>{{{createLink 'Partials'}}}</li>
+		<li>{{{createLink 'References'}}}</li>
+		<li>{{{createLink 'Templates'}}}</li>
+		<li>{{{createLink 'Transitions'}}}</li>
+		<li>{{{createLink 'Two-way binding'}}}</li>
+	</ul>
+</section>
