--- a/templates/partials/left-nav.md.hbs
+++ b/templates/partials/left-nav.md.hbs
@@ -3,6 +3,7 @@
 	<ul>
 		<li>{{{createLink 'Get started'}}}</li>
 		<li>{{{createLink 'Get support'}}}</li>
+		<li>{{{createLink 'Contributing'}}}</li>
 	</ul>
 </section>
 
