fixed some missing links etc

--- a/docs/0.3.9/Magic mode.md.hbs
+++ b/docs/0.3.9/Magic mode.md.hbs
@@ -1,5 +1,5 @@
 ---
-title: Magic Mode
+title: Magic mode
 ---
 Normally, you would update data using {{{createLink 'ractive.set()'}}}, {{{createLink 'ractive.animate()'}}}, or the {{{createLink 'array-modification' 'array mutator methods'}}}.
 
