--- a/docs/0.3.9/Ractive.partials (global).md.hbs
+++ b/docs/0.3.9/Ractive.partials (global).md.hbs
@@ -1,5 +1,5 @@
 ---
-title: Ractive.parials (global)
+title: Ractive.partials
 ---
 {{{createLink 'Partials'}}} can be made globally available to Ractive instances by adding them to `Ractive.partials`:
 
