--- a/docs/0.3.9/Two-way binding.md.hbs
+++ b/docs/0.3.9/Two-way binding.md.hbs
@@ -1,5 +1,5 @@
 ---
-title: Two-way Binding 
+title: Two-way binding
 ---
 By default, a Ractive instance will update its internal model based on user input, if you have `<input>`, `<textarea>` or `<select>` elements.
 
