--- a/docs/0.3.9/Writing plugins.md.hbs
+++ b/docs/0.3.9/Writing plugins.md.hbs
@@ -1,5 +1,5 @@
 ---
-title: Plugin APIs
+title: Writing plugins
 section: Plugins
 ---
 You can create plugins for Ractive that add new features. The plugin APIs are documented on these pages:
