--- a/docs/0.3.9/ractive.transitions (instance).md.hbs
+++ b/docs/0.3.9/ractive.transitions (instance).md.hbs
@@ -1,5 +1,5 @@
 ---
-title: ractive.transitions (instance)
+title: ractive.transitions
 ---
 Each Ractive instance has a `transitions` property, which contains {{{createLink 'transitions' 'transition functions'}}} specific to that instance.
 
