--- a/scss/options.scss
+++ b/scss/options.scss
@@ -40,6 +40,6 @@ blockquote {
 }
 
 .content > blockquote {
-	background-color: #fdfdfd;
+	background-color: #fbfbfb;
 	padding: 1em 1em 1em 2em;
 }
