--- a/templates/partials/left-nav.md.hbs
+++ b/templates/partials/left-nav.md.hbs
@@ -35,8 +35,8 @@
 	<h2>Instance properties</h2>
 	<ul>
 		<li>{{{createLink 'ractive.nodes'}}}</li>
-		<li>{{{createLink 'ractive.transitions'}}}</li>
-		<li>{{{createLink 'ractive-partials-instance' 'ractive.partials'}}}</li>
+		<li>{{{createLink 'ractive.transitions (instance)' 'ractive.transitions'}}}</li>
+		<li>{{{createLink 'ractive.partials (instance)' 'ractive.partials'}}}</li>
 	</ul>
 
 	<h2>Static methods</h2>
@@ -54,15 +54,15 @@
 <section>
 	<h1>Plugins</h1>
 	<ul>
-		<li>{{{createLink 'Find plugins'}}}</li>
-		<li>{{{createLink 'Create plugins'}}}</li>
+		<li>{{{createLink 'Plugins' 'List of plugins'}}}</li>
+		<li>{{{createLink 'Writing plugins'}}}</li>
 	</ul>
 </section>
 
 <section>
 	<h1>Glossary</h1>
 	<ul>
-		<li>{{{createLink 'Adapators'}}}</li>
+		<li>{{{createLink 'Adaptors'}}}</li>
 		<li>{{{createLink 'Array modification'}}}</li>
 		<li>{{{createLink 'Components'}}}</li>
 		<li>{{{createLink 'Decorators'}}}</li>
@@ -70,7 +70,7 @@
 		<li>{{{createLink 'Expressions'}}}</li>
 		<li>{{{createLink 'Events'}}}</li>
 		<li>{{{createLink 'Keypaths'}}}</li>
-		<li>{{{createLink 'Magic Mode'}}}</li>
+		<li>{{{createLink 'Magic mode'}}}</li>
 		<li>{{{createLink 'Mustaches'}}}</li>
 		<li>{{{createLink 'Observers'}}}</li>
 		<li>{{{createLink 'Parallel DOM'}}}</li>
