--- a/docs/0.3.9/Ractive.partials (instance).md.hbs
+++ b/docs/0.3.9/Ractive.partials (instance).md.hbs
@@ -1,5 +1,5 @@
 ---
-title: Ractive.parials (instance)
+title: ractive.partials
 ---
 Instance-specific {{{createLink 'partials'}}} exist as properties of `ractive.partials`.
 
