--- a/docs/0.3.9/Ractive.transitions (global).md.hbs
+++ b/docs/0.3.9/Ractive.transitions (global).md.hbs
@@ -1,5 +1,5 @@
 ---
-title: Ractive.transitions (global)
+title: Ractive.transitions
 ---
 This is a set of globally-available (i.e, shared between all Ractive instances) {{{createLink 'transitions' 'transition functions'}}}. If an element with a specified `intro` or `outro` is added or removed, Ractive will first try to find the transition function on {{{createLink 'ractive-transitions-instance' 'ractive.transitions'}}} - if it fails, it will then look in `Ractive.transitions`.
 
