--- a/templates/page.hbs
+++ b/templates/page.hbs
@@ -23,7 +23,10 @@
 
 	<main>
 		<div class='content'>
-			<h1>{{title}}</h1>
+			<header class='main-header'>
+				<h1>{{title}}</h1>
+				<a class='edit-link' href='<%= getEditLink("{{page.dirname}}/{{page.filename}}") %>'>edit this page</a>
+			</header>
 
 			{{# markdown}}
 				{{> body}}
