--- a/docs/0.4.0/Get started.md.hbs
+++ b/docs/0.4.0/Get started.md.hbs
@@ -9,3 +9,5 @@ If you see something wrong, out of date, or missing from this documentation, ple
 A good way to get up and running is with the [60 second setup](http://ractivejs.org/60-second-setup). After that, working your way through the [interactive tutorials](http://learn.ractivejs.org) will familiarise you with the various ways you can use Ractive.
 
 If you get stuck at any point, visit the {{{createLink 'Get support'}}} page to find help.
+
+*Documentation for previous versions: [0.3.9](../0.3.9)*
