--- a/templates/0.4.0/partials/left-nav.md.hbs
+++ b/templates/0.4.0/partials/left-nav.md.hbs
@@ -16,6 +16,7 @@
 
 	<h2>Instance methods</h2>
 	<ul>
+		<li>{{{createLink 'ractive.add()'}}}</li>
 		<li>{{{createLink 'ractive.animate()'}}}</li>
 		<li>{{{createLink 'ractive.find()'}}}</li>
 		<li>{{{createLink 'ractive.findComponent()'}}}</li>
@@ -28,6 +29,7 @@
 		<li>{{{createLink 'ractive.off()'}}}</li>
 		<li>{{{createLink 'ractive.on()'}}}</li>
 		<li>{{{createLink 'ractive.set()'}}}</li>
+		<li>{{{createLink 'ractive.subtract()'}}}</li>
 		<li>{{{createLink 'ractive.teardown()'}}}</li>
 		<li>{{{createLink 'ractive.toHTML()'}}}</li>
 		<li>{{{createLink 'ractive.update()'}}}</li>
@@ -81,5 +83,14 @@
 		<li>{{{createLink 'Templates'}}}</li>
 		<li>{{{createLink 'Transitions'}}}</li>
 		<li>{{{createLink 'Two-way binding'}}}</li>
+	</ul>
+</section>
+
+<section>
+	<h1>Specific versions</h1>
+
+	<ul>
+		<li><a href='../0.3.9'>0.3.9</a></li>
+		<li><a href='../0.4.0'>0.4.0</a></li>
 	</ul>
 </section>
