--- a/templates/0.3.9/partials/left-nav.md.hbs
+++ b/templates/0.3.9/partials/left-nav.md.hbs
@@ -81,3 +81,12 @@
 		<li>{{{createLink 'Two-way binding'}}}</li>
 	</ul>
 </section>
+
+<section>
+	<h1>Specific versions</h1>
+
+	<ul>
+		<li><a href='../0.3.9'>0.3.9</a></li>
+		<li><a href='../0.4.0'>0.4.0</a></li>
+	</ul>
+</section>
