ractive.detach() and ractive.insert() docs

--- a/templates/0.4.0/partials/left-nav.md.hbs
+++ b/templates/0.4.0/partials/left-nav.md.hbs
@@ -18,12 +18,14 @@
 	<ul>
 		<li>{{{createLink 'ractive.add()'}}}</li>
 		<li>{{{createLink 'ractive.animate()'}}}</li>
+		<li>{{{createLink 'ractive.detach()'}}}</li>
 		<li>{{{createLink 'ractive.find()'}}}</li>
 		<li>{{{createLink 'ractive.findComponent()'}}}</li>
 		<li>{{{createLink 'ractive.findAll()'}}}</li>
 		<li>{{{createLink 'ractive.findAllComponents()'}}}</li>
 		<li>{{{createLink 'ractive.fire()'}}}</li>
 		<li>{{{createLink 'ractive.get()'}}}</li>
+		<li>{{{createLink 'ractive.insert()'}}}</li>
 		<li>{{{createLink 'ractive.merge()'}}}</li>
 		<li>{{{createLink 'ractive.observe()'}}}</li>
 		<li>{{{createLink 'ractive.off()'}}}</li>
