ractive.toggle() docs

--- a/templates/0.4.0/partials/left-nav.md.hbs
+++ b/templates/0.4.0/partials/left-nav.md.hbs
@@ -33,6 +33,7 @@
 		<li>{{{createLink 'ractive.set()'}}}</li>
 		<li>{{{createLink 'ractive.subtract()'}}}</li>
 		<li>{{{createLink 'ractive.teardown()'}}}</li>
+		<li>{{{createLink 'ractive.toggle()'}}}</li>
 		<li>{{{createLink 'ractive.toHTML()'}}}</li>
 		<li>{{{createLink 'ractive.update()'}}}</li>
 		<li>{{{createLink 'ractive.updateModel()'}}}</li>
