ractive.reset() docs

--- a/templates/0.4.0/partials/left-nav.md.hbs
+++ b/templates/0.4.0/partials/left-nav.md.hbs
@@ -30,6 +30,7 @@
 		<li>{{{createLink 'ractive.observe()'}}}</li>
 		<li>{{{createLink 'ractive.off()'}}}</li>
 		<li>{{{createLink 'ractive.on()'}}}</li>
+		<li>{{{createLink 'ractive.reset()'}}}</li>
 		<li>{{{createLink 'ractive.set()'}}}</li>
 		<li>{{{createLink 'ractive.subtract()'}}}</li>
 		<li>{{{createLink 'ractive.teardown()'}}}</li>
