--- a/docs/0.4.0/ractive.observe().md.hbs
+++ b/docs/0.4.0/ractive.observe().md.hbs
@@ -1,15 +1,33 @@
 ---
 title: ractive.observe()
 ---
-Observes the data at a particular {{{createLink 'keypaths' 'keypath'}}}. Unless specified otherwise, the *observer* will be *initialised* once as soon as you create the observer, with `undefined` as `oldValue`. Thereafter it will be *notified* whenever the *observed keypath* changes.
+Observes the data at a particular {{{createLink 'keypaths' 'keypath'}}}. Unless specified otherwise, the callback will be fired immediately, with `undefined` as `oldValue`. Thereafter it will be called whenever the *observed keypath* changes.
+
+Note that you can observe keypath *patterns*...
+
+```js
+ractive.observe( 'items.*.status', function ( newValue, oldValue, keypath ) {
+	var index = /items.(\d+).status/.exec( keypath )[1];
+	alert( 'item ' + index + ' status changed from ' + oldValue + ' to ' + newValue );
+});
+```
+
+...or multiple space-separated keypaths simultaneously:
+
+```js
+ractive.observe( 'foo bar baz', function ( newValue, oldValue, keypath ) {
+	alert( keypath + ' changed from ' + oldValue + ' to ' + newValue );
+});
+```
 
 See {{{createLink 'Observers'}}} for more detail.
 
 
 > ### ractive.observe( keypath, callback[, options ])
 > Returns an object with a `cancel` method, for cancelling the observer
+
 > > #### **keypath** *`String`*
-> > The [keypath](keypaths) to observe. Any of the keys in this keypath can be a `*` character, which is treated as a wildcard.
+> > The [keypath](keypaths) to observe, or a group of space-separated keypaths. Any of the keys can be a `*` character, which is treated as a wildcard.
 > > #### **callback** *`Function`*
 > > The function that will be called, with `newValue`, `oldValue` and `keypath` as arguments (see {{{createLink 'Observers'}}} for more nuance regarding these arguments), whenever the observed keypath changes value. By default the function will be called with `ractive` as `this`
 > > #### options *`Object`*
@@ -25,6 +43,7 @@ See {{{createLink 'Observers'}}} for more detail.
 
 > ### ractive.observe( map[, options ])
 > Returns an object with a `cancel` method, for cancelling all observers
+
 > > #### **map** *`Object`*
 > > A map of `keypath: observer` pairs
 > > #### options *`Object`*
