--- a/docs/0.4.0/ractive.set().md.hbs
+++ b/docs/0.4.0/ractive.set().md.hbs
@@ -6,8 +6,8 @@ Updates data and triggers a re-render of any mustaches that are affected (direct
 A `set` {{{createLink 'events' 'event'}}} will be fired with `keypath` and `value` as arguments (or `map`, if you set multiple options at once).
 
 
-> ### ractive.set( keypath, value[, complete ])
-> Returns `ractive`
+> ### ractive.set( keypath, value )
+> Returns a `Promise` (see {{{createLink 'Promises'}}})
 
 > > #### **keypath** *`String`*
 > > The {{{createLink 'keypaths' 'keypath'}}} of the data we're changing, e.g. `user` or `user.name` or `user.friends[1]`
@@ -15,14 +15,9 @@ A `set` {{{createLink 'events' 'event'}}} will be fired with `keypath` and `valu
 > > #### **value**
 > > The value we're changing it to. Can be a primitive or an object (or array), in which case dependants of *downstream keypaths* will also be re-rendered (if they have changed)
 
-> > #### complete *`Function`*
-> > A function that will be called, with `ractive` as `this`, as soon as all transitions triggered by the change (i.e. elements being added or removed) are complete
 
-
-> ### ractive.set( map[, complete ])
+> ### ractive.set( map )
 > Returns `ractive`
 
 > > #### **map** *`Object`*
 > > A map of `keypath: value` pairs, as above
-> > #### complete *`Function`*
-> > As above
