--- a/templates/0.4.0/partials/left-nav.md.hbs
+++ b/templates/0.4.0/partials/left-nav.md.hbs
@@ -61,32 +61,42 @@
 </ul>
 
 <section>
-	<h1>Plugins</h1>
+	<h1>Using plugins</h1>
 	<ul>
 		<li>{{{createLink 'Plugins' 'List of plugins'}}}</li>
-		<li>{{{createLink 'Writing plugins'}}}</li>
+		<li>{{{createLink 'Adaptors'}}}</li>
+		<li>{{{createLink 'Decorators'}}}</li>
+		<li>{{{createLink 'Events'}}}</li>
+		<li>{{{createLink 'Transitions'}}}</li>
+	</ul>
+</section>
+
+<section>
+	<h1>Writing plugins</h1>
+	<ul>
+		<li>{{{createLink 'Writing adaptor plugins' 'Adaptors'}}}</li>
+		<li>{{{createLink 'Writing decorator plugins' 'Decorators'}}}</li>
+		<li>{{{createLink 'Writing event plugins' 'Events'}}}</li>
+		<li>{{{createLink 'Writing transition plugins' 'Transitions'}}}</li>
 	</ul>
 </section>
 
 <section>
 	<h1>Glossary</h1>
 	<ul>
-		<li>{{{createLink 'Adaptors'}}}</li>
 		<li>{{{createLink 'Array modification'}}}</li>
 		<li>{{{createLink 'Components'}}}</li>
-		<li>{{{createLink 'Decorators'}}}</li>
 		<li>{{{createLink 'Dependants'}}}</li>
 		<li>{{{createLink 'Expressions'}}}</li>
-		<li>{{{createLink 'Events'}}}</li>
 		<li>{{{createLink 'Keypaths'}}}</li>
 		<li>{{{createLink 'Magic mode'}}}</li>
 		<li>{{{createLink 'Mustaches'}}}</li>
 		<li>{{{createLink 'Observers'}}}</li>
 		<li>{{{createLink 'Parallel DOM'}}}</li>
 		<li>{{{createLink 'Partials'}}}</li>
+		<li>{{{createLink 'Promises'}}}</li>
 		<li>{{{createLink 'References'}}}</li>
 		<li>{{{createLink 'Templates'}}}</li>
-		<li>{{{createLink 'Transitions'}}}</li>
 		<li>{{{createLink 'Two-way binding'}}}</li>
 	</ul>
 </section>
