--- a/docs/0.4.0/Components.md.hbs
+++ b/docs/0.4.0/Components.md.hbs
@@ -72,7 +72,7 @@ The result of this would be
 But if we used the same example and set isolated to true
 ```js
 
-var Component = Ractvie.extend({
+var Component = Ractive.extend({
   isolated: true,
   template: '#template'
 })
