Added "Get started with node.js" page

--- a/templates/0.4.0/partials/left-nav.md.hbs
+++ b/templates/0.4.0/partials/left-nav.md.hbs
@@ -4,6 +4,7 @@
 		<li>{{{createLink 'Get started'}}}</li>
 		<li>{{{createLink 'Get support'}}}</li>
 		<li>{{{createLink 'Contributing'}}}</li>
+		<li>{{{createLink 'Get started with node.js'}}}</li>
 	</ul>
 </section>
 
