Squashed 'shared/' changes from 6f0b4b2..3046675
3046675 actually fix ff bug
31bbb52 fix line height in firefox
418c86f fix plugins link (closes #1)
dfec614 fix case sensitive fontface declaration

git-subtree-dir: shared
git-subtree-split: 3046675870e42bbf98218c5a6e0db50e232b7866

--- a/scss/header.scss
+++ b/scss/header.scss
@@ -21,7 +21,7 @@ header {
 		font-size: 1.2em;
 		color: #999;
 		display: inline-block;
-		line-height: 1.2;
+		line-height: 1.2em;
 	}
 
 	br {
@@ -56,6 +56,7 @@ header {
 
 		br {
 			display: block;
+			line-height: 0;
 		}
 	}
 }
