--- a/shared/scss/code.scss
+++ b/shared/scss/code.scss
@@ -56,7 +56,7 @@ code {
 pre code {
 	border: none;
 	border-radius: 0;
-	background-color: none;
+	background-color: transparent;
 	color: inherit;
 	font-weight: inherit;
 	font-size: inherit;
